--- a/extensions/native/recursion/Cargo.toml
+++ b/extensions/native/recursion/Cargo.toml
@@ -31,6 +31,7 @@ lazy_static.workspace = true
 once_cell = { workspace = true, optional = true, features = ["std"] }
 metrics = { workspace = true, optional = true }
 cfg-if = { workspace = true }
+serde_with = { workspace = true, optional = true, features = ["hex"] }
 
 [dev-dependencies]
 openvm-native-recursion = { workspace = true, features = ["test-utils"] }
@@ -44,6 +45,7 @@ static-verifier = [
     "openvm-native-compiler/halo2-compiler",
     "dep:snark-verifier-sdk",
     "dep:once_cell",
+    "dep:serde_with",
 ]
 test-utils = ["openvm-circuit/test-utils"]
 bench-metrics = [
