--- a/benchmarks/programs/revm_transfer/Cargo.toml
+++ b/benchmarks/programs/revm_transfer/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 revm = { version = "18.0.0", default-features = false }
-openvm = { path = "../../../crates/toolchain/openvm" }
+openvm = { path = "../../../crates/toolchain/openvm", features = ["std"] }
 openvm-keccak256-guest = { path = "../../../extensions/keccak256/guest", default-features = false }
 tracing = { version = "0.1.40", default-features = false }
 alloy-primitives = { version = "0.8.10", default-features = false, features = [
@@ -15,7 +15,6 @@ alloy-primitives = { version = "0.8.10", default-features = false, features = [
 
 [features]
 default = []
-std = ["openvm/std", "revm/std"]
 
 [profile.profiling]
 inherits = "release"
