--- a/benchmarks/execute/Cargo.toml
+++ b/benchmarks/execute/Cargo.toml
@@ -28,7 +28,7 @@ tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
-divan = { version = "0.1.21" }
+divan = { package = "codspeed-divan-compat", version = "*" }
 
 [features]
 default = ["jemalloc"]
