--- a/guest-libs/sha2/tests/programs/Cargo.toml
+++ b/guest-libs/sha2/tests/programs/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 openvm = { path = "../../../../crates/toolchain/openvm" }
+openvm-platform = { path = "../../../../crates/toolchain/platform" }
 openvm-sha2 = { path = "../../guest" }
 
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
