--- a/benchmarks/guest/ecrecover/Cargo.toml
+++ b/benchmarks/guest/ecrecover/Cargo.toml
@@ -13,6 +13,7 @@ openvm-ecc-guest = { path = "../../../extensions/ecc/guest", default-features = 
     "k256",
 ] }
 openvm-keccak256 = { path = "../../../guest-libs/keccak256/guest", default-features = false }
+openvm-k256 = { path = "../../../guest-libs/k256/guest", default-features = false }
 # We do not patch revm-precompile so that the benchmark only depends on this repo.
 revm-precompile = { version = "14.0.0", default-features = false }
 alloy-primitives = { version = "0.8.10", default-features = false, features = [
