--- a/benchmarks/guest/ecrecover/Cargo.toml
+++ b/benchmarks/guest/ecrecover/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 k256 = { version = "0.13.3", default-features = false, features = ["ecdsa"] }
+ecdsa = { version = "0.16.9", default-features = false }
 openvm = { path = "../../../crates/toolchain/openvm", features = ["std"] }
 openvm-platform = { path = "../../../crates/toolchain/platform", default-features = false }
 openvm-algebra-guest = { path = "../../../extensions/algebra/guest", default-features = false }
