--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -35,7 +35,7 @@ eyre.workspace = true
 derivative.workspace = true
 static_assertions.workspace = true
 getset.workspace = true
-zerocopy.workspace = true
+zerocopy = { workspace = true, features = ["derive"] }
 
 [dev-dependencies]
 test-log.workspace = true
