--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -36,6 +36,7 @@ derivative.workspace = true
 static_assertions.workspace = true
 getset.workspace = true
 dashmap.workspace = true
+memmap2 = "0.9.5"
 
 [dev-dependencies]
 test-log.workspace = true
