--- a/extensions/keccak256/guest/Cargo.toml
+++ b/extensions/keccak256/guest/Cargo.toml
@@ -8,7 +8,12 @@ homepage.workspace = true
 repository.workspace = true
 
 [dependencies]
+openvm.workspace = true
 openvm-platform = { workspace = true }
+serde = { version = "1.0", default-features = false, features = [
+    "alloc",
+    "derive",
+] }
 
 [target.'cfg(not(target_os = "zkvm"))'.dependencies]
 tiny-keccak.workspace = true
