--- a/extensions/ecc/guest/Cargo.toml
+++ b/extensions/ecc/guest/Cargo.toml
@@ -12,6 +12,7 @@ openvm = { workspace = true }
 serde = { workspace = true }
 strum_macros.workspace = true
 ecdsa = { workspace = true, features = ["verifying"] }
+signature = { workspace = true }
 elliptic-curve = { workspace = true, features = ["arithmetic", "sec1"] }
 k256 = { workspace = true, optional = true }
 p256 = { workspace = true, optional = true }
@@ -38,6 +39,8 @@ default = []
 k256 = ["dep:k256"]
 p256 = ["dep:p256"]
 halo2curves = ["dep:halo2curves-axiom", "openvm-algebra-guest/halo2curves"]
+std = ["alloc"]
+alloc = []
 
 [package.metadata.cargo-shear]
 ignored = ["openvm", "openvm-custom-insn", "openvm-rv32im-guest", "halo2curves-axiom"]
