--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -29,6 +29,8 @@ jobs:
       - disk=large
       - runner=32cpu-linux-arm64
       - extras=s3-cache
+    env:
+      CARGO_CURRENT_BRANCH: ${{ github.ref_name }}
 
     steps:
       - uses: actions/checkout@v4
@@ -58,6 +60,11 @@ jobs:
         run: |
           for dir in */; do
             if [ -f "${dir}Cargo.toml" ]; then
+              echo "Editing ${dir}Cargo.toml to use the current branch"
+              sed -i \
+                -e "s|\(git = \"https://github.com/openvm-org/openvm.git\"\)|\1, branch = \"${CARGO_CURRENT_BRANCH}\"|" \
+                "${dir}Cargo.toml"
+
               echo "Building ${dir%/}"
               cd "$dir"
               cargo openvm build && cargo openvm run
