--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -29,8 +29,6 @@ jobs:
       - disk=large
       - runner=32cpu-linux-arm64
       - extras=s3-cache
-    env:
-      CARGO_CURRENT_BRANCH: ${{ github.ref_name }}
 
     steps:
       - uses: actions/checkout@v4
@@ -62,7 +60,7 @@ jobs:
             if [ -f "${dir}Cargo.toml" ]; then
               echo "Editing ${dir}Cargo.toml to use the current branch"
               sed -i \
-                -e "s|\(git = \"https://github.com/openvm-org/openvm.git\"\)|\1, branch = \"${CARGO_CURRENT_BRANCH}\"|" \
+                -e "s|\(git = \"https://github.com/openvm-org/openvm.git\"\)|\1, branch = \"${GITHUB_REF##*/}\"|" \
                 "${dir}Cargo.toml"
 
               echo "Building ${dir%/}"
