--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -38,7 +38,9 @@ jobs:
           cache-on-failure: true
       - uses: taiki-e/install-action@nextest
       - name: Install solc # svm should support arm64 linux
-        run: (hash svm 2>/dev/null || cargo install --version 0.2.23 svm-rs) && svm install 0.8.19 && solc --version
+        run: |
+          echo ${{ github.head_ref }}
+          (hash svm 2>/dev/null || cargo install --version 0.2.23 svm-rs) && svm install 0.8.19 && solc --version
 
       - name: Install cargo-openvm
         working-directory: crates/cli
@@ -60,7 +62,7 @@ jobs:
             if [ -f "${dir}Cargo.toml" ]; then
               echo "Editing ${dir}Cargo.toml to use the current branch"
               sed -i \
-                -e "s|\(git = \"https://github.com/openvm-org/openvm.git\"\)|\1, branch = \"${GITHUB_REF##*/}\"|" \
+                -e "s|\(git = \"https://github.com/openvm-org/openvm.git\"\)|\1, branch = \"${{ github.head_ref }}\"|" \
                 "${dir}Cargo.toml"
 
               echo "Building ${dir%/}"
