--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -35,7 +35,7 @@ eyre.workspace = true
 derivative.workspace = true
 static_assertions.workspace = true
 getset.workspace = true
-dashmap = { version = "6.1.0", features = ["rayon"] }
+dashmap = { version = "6.1.0" }
 
 [dev-dependencies]
 test-log.workspace = true
@@ -48,7 +48,7 @@ openvm-rv32im-transpiler.workspace = true
 
 [features]
 default = ["parallel", "jemalloc"]
-parallel = ["openvm-stark-backend/parallel"]
+parallel = ["openvm-stark-backend/parallel", "dashmap/rayon"]
 test-utils = ["dep:openvm-stark-sdk"]
 bench-metrics = ["dep:metrics", "openvm-stark-backend/bench-metrics"]
 function-span = ["bench-metrics"]
