--- a/extensions/pairing/circuit/Cargo.toml
+++ b/extensions/pairing/circuit/Cargo.toml
@@ -24,6 +24,8 @@ openvm-rv32im-circuit = { workspace = true }
 openvm-algebra-circuit = { workspace = true }
 openvm-ecc-circuit = { workspace = true }
 openvm-pairing-transpiler = { workspace = true }
+openvm-cuda-backend = { workspace = true, optional = true }
+openvm-stark-sdk = { workspace = true, optional = true }
 
 num-bigint = { workspace = true }
 num-traits = { workspace = true }
@@ -49,3 +51,22 @@ openvm-pairing-guest = { workspace = true, features = [
     "bls12_381",
     "bn254",
 ] }
+
+[features]
+default = []
+cuda = [
+    "dep:openvm-cuda-backend",
+    "dep:openvm-stark-sdk",
+    "openvm-circuit-primitives/cuda",
+    "openvm-circuit/cuda",
+    "openvm-algebra-circuit/cuda",
+    "openvm-ecc-circuit/cuda",
+]
+touchemall = [
+    "cuda", 
+    "openvm-circuit/touchemall",
+    "openvm-circuit-primitives/touchemall",
+    "openvm-cuda-backend/touchemall",
+    "openvm-algebra-circuit/touchemall",
+    "openvm-ecc-circuit/touchemall",
+]
