--- a/.github/workflows/extension-tests.yml
+++ b/.github/workflows/extension-tests.yml
@@ -76,7 +76,7 @@ jobs:
       - uses: taiki-e/install-action@nextest
 
       - name: Check CUDA status and set environment variables
-        if: contains(matrix.extension.family, 'g4dn')
+        if: contains(matrix.extension.image, 'gpu')
         run: |
           nvidia-smi
           nvidia-smi -L
@@ -96,7 +96,7 @@ jobs:
           ${{ env.CIRCUIT_TEST_ENV }} cargo nextest run ${{ env.CIRCUIT_TEST_FILTER }} --cargo-profile=fast ${{ env.FEATURE_ARGS }} $TEST_THREADS --no-tests=pass
 
       - name: Run ${{ matrix.extension.name }} guest crate tests
-        if: ${{ !contains(matrix.extension.family, 'g4dn') && hashFiles(format('extensions/{0}/guest', matrix.extension.path)) != '' }}
+        if: ${{ !contains(matrix.extension.image, 'gpu') && hashFiles(format('extensions/{0}/guest', matrix.extension.path)) != '' }}
         working-directory: extensions/${{ matrix.extension.path }}/guest
         run: |
           GUEST_FEATURE_ARGS=""
